<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="CB_AuxMVCB_Sch" Id="{bf79065d-bf0a-403a-9e77-3fb4fc867ac8}">
    <Declaration><![CDATA[///////////
// Structure For Bousquet. Main Operating Data to be saved (ex: OPC).  
//////////

TYPE CB_AuxMVCB_Sch :
STRUCT
	//DI
	MesData					: CB ;      (* Object*)
	MesFuseBurned		    : BOOL ; 	(* The Fuse is burned*)
	MesEarth				: BOOL ; 	(* The Cell is grounded*)

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>








